# FireflyAlgorithm

./: CMakeLists.txt  README.md  index.html  params.json
src/: CMakeLists.txt  FireFly.cpp  FireFly.h  main.cpp
test/: CMakeLists.txt  FireFlySpec.cpp
